--- a/projetos/desafio-01/assets/css/style.css
+++ b/projetos/desafio-01/assets/css/style.css
@@ -73,40 +73,94 @@ header{
 }
 
 #modulo{
-    width: 790px;
     font-family: 'Raleway', sans-serif;
-    margin: auto;
-    margin: 40px 0px;
+    padding: 40px;
+    margin: 0 auto;
+    width: 790px;
 }
-
 #modulo h2{
     font-weight: 700;
     font-size: 32px;
     color: #33A8DB;
     text-align: center;
     letter-spacing: 7px;
+    margin-bottom: 20px;
 }
 
 #modulo p{
     font-weight: 400;
     font-size: 16px;
     text-align: center;
+    margin-bottom: 20px;
 }
 
-#modulo ul{
+.topic{
     margin: 0 auto;
-}
-
-#modulo li{
-    list-style: none;
-    border: 1px solid #33A8DB;
+    width: 535px;
     background-color: #252525;
+    border: 1px solid #33A8DB;
     border-radius: 30px;
     text-align: center;
-    width: 535px;
-    height: 50px;
+    padding: 20px;
+    margin-bottom: 20px;
+    box-shadow: inset -2px 6px 4px #00000066;
 }
 
-#modulo span{
+.topic span{
     color: #33A8DB;
+}
+
+#woman{
+    background-image: url(../imagens/woman-code.png);
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    border-top: 1px solid #33A8DB;
+    border-bottom: 1px solid #33A8DB;
+    padding: 20px;
+}
+
+#woman h2{
+    color: white;
+    white-space: pre-wrap;
+    line-height: 46px;
+    font-size: 40px;
+    font-weight: 900;
+    text-shadow: 3px 2px #33A8DB;
+}
+
+#end{
+    text-align: center;
+    padding: 40px;
+}
+
+#end h2{
+    color: #33A8DB;
+    font-size: 32px;
+    font-weight: 700;
+    letter-spacing: 7px;
+    white-space: pre;
+    line-height: 40px;
+}
+
+#end p{
+    margin-top: 20px;
+    font-weight: 400;
+    white-space: pre-line;
+}
+footer{
+    background-image: linear-gradient(to top, #33a9db2f, black);
+    border-top: 1px solid #33A8DB;
+    padding: 40px;
+    text-align: center;
+}
+footer a{
+    color: #33A8DB;
+    font-weight: 700;
+    text-decoration: none;
+}
+
+footer p{
+    margin-top: 5px;
+    font-weight: 400;
 }
